# NeuralAmpModelerJuce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: GTests.cmake
source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/GUI/: CMakeLists.txt
source/GUI/lookandfeel/: ButtonLF.h  LabelLF.h
source/architecture/: architecture.hpp
source/core/: NAMProcessor.h
source/resampler/: Resampler.h
source/rms/: meter.h
tests/gui_tests/: bypass_state_tests.cpp  load_button_tests.cpp  slider_tests.cpp
tests/processor_tests/: AudioProcessorTest.cpp  AudioProcessorTestHelper.h
tests/state_tests/: processor_state_tests.cpp  state_manager_tests.cpp
tests/test-helper/: editor_test_helper.cpp  editor_test_helper.h
